[ADD : 로그인 기능 추가]

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,7 @@ TYPEORM_PORT = PORT
 TYPEORM_USERNAME = USERNAME
 TYPEORM_PASSWORD = PASSWORD
 TYPEORM_DATABASE = DATABASE
+
+JWT_SECRET_KEY = JWT SECRET KEY
+JWT_EXPIRES_IN = JWT EXPIRES TIME
+ALGORITHM = JWT ALGORITHM
